[package]
name = "tuxtrain"
version = "0.0.2"
authors = ["leaty <dev@leaty.net>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "An easy-to-use generic trainer for Linux"
repository = "https://github.com/leaty/tuxtrain"

[[bin]]
name = "tuxtrain"
path = "src/bin/tuxtrain.rs"

[[bin]]
name = "tuxtraind"
path = "src/bin/tuxtraind.rs"

[lib]
name = "tuxtrain"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
colored = "2.0.0"
hex = "0.4.3"
nix = "0.23.1"
procfs = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
